a1/brendan_gordon/TEST_PROGRAMS/invalidtype/maxim_gorshkov/prog5.min
# If the expression is not an implicit int, not a valid program

var x : int;

if 12.2 then
	x = x + 1;
endif
